--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,52 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+/* Ensure these styles are included in your CSS file or a styled-components file */
+.slider-container {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  /* background-color: rgba(11, 93, 215, 0.2); */
+  padding: 10px 0;
+  border-top: 1px solid rgba(11, 93, 215, 0.6);
+  border-bottom: 1px solid rgba(11, 93, 215, 0.6);
+}
+
+.slider-wrapper {
+  display: flex;
+  animation: slide 20s linear infinite;
+}
+
+.slider-item {
+  flex: 0 0 auto;
+  margin-right: 2rem;
+  box-sizing: border-box;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.hover-effect {
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.hover-effect:hover {
+  /* transform: translateY(-0.25rem);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+  color: #0b5ed7 !important;
+  cursor: pointer !important;
+}
